додані фото та виправлені списки

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="">
-            <p>WebStudio</p>
-        </div>
+        <a href="">WebStudio</a>
         <nav>
             <ul>
                 <li>Студія</li>
@@ -18,81 +16,90 @@
                 <li>Контакти</li>
             </ul>
         </nav>
-        <div class="">
-            <a href="">info@devstudio.com</a>
-        </div>
-        <div class="">
-            <a href="">+38 096 111 11 11</a>
-        </div>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
 
 
 
     <main>
-        <div class="">
+        <section class="">
             <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button>Замовити послугу</button>
-        </div>
-        <div class="">
-            <div class="">
-                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            </div>
-            <div class="">
-                <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-            </div>
-            <div class="">
-                <h3>ПЛАНУВАННЯ</h3>
+            <button type="button">Замовити послугу</button>
+        </section>
+        <section class="">
+            <ul>
+                <li class="">
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li class="">
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li class="">
+                    <h3>ПЛАНУВАННЯ</h3>
                 <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-            </div>
-            <div class="">
-                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-            </div>
-        </div>
+                </li>
+                <li class="">
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </section>
         <section>
             <h2>Чим ми займаємося</h2>
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
+            <ul>
+                <li><img src="./images/box1.jpg" alt="Друкує код" width="370" height="294"></li>
+                <li><img src="./images/box2.jpg" alt="Адаптує для телефону" width="370" height="294"></li>
+                <li><img src="./images/box3.jpg" alt="Підбирає колір" width="370" height="294"></li>
+            </ul>
         </section>
-        <div class="">
+        <section class="">
             <h2>Наша команда</h2>
-            <article>
-                <img src="" alt="">
-                <h4>Ігор Дем'яненко</h4>
-                <p>Product Designer</p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <h4>Ольга Рєпіна</h4>
-                <p>Frontend Developer</p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <h4>Микола Тарасов</h4>
-                <p>Marketing</p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <h4>Михайло Єрмаков</h4>
-                <p>UI Designer</p>
-            </article>
-        </div>
+            <ul>
+                <li>
+                    <img src="./images/img4.jpg" alt="Фото Ігора" width="270" height="260">
+                    <h4>Ігор Дем'яненко</h4>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/img5.jpg" alt="Фото Ольги" width="270" height="260">
+                    <h4>Ольга Рєпіна</h4>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img6.jpg" alt="Фото Миколи" width="270" height="260">
+                    <h4>Микола Тарасов</h4>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img7.jpg" alt="Фото Михайла" width="270" height="260">
+                    <h4>Михайло Єрмаков</h4>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
 
 
 
     <footer>
-        <div>
-            <p>WebStudio</p>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <p><a href="">info@devstudio.com</a></p>
-            <p><a href="">+38 096 111 11 11</a></p>
-        </div>
+        <a href="">WebStudio</a>
+        <address>
+            <ul>
+                <li>
+                    <a href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м. Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+
+            </ul>
+        </address>
     </footer>
 </body>
 </html>
