--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <a href="">WebStudio</a>
         <nav>
             <ul>
-                <li>Студія</li>
-                <li>Портфоліо</li>
-                <li>Контакти</li>
+                <li><a href="">Студія</a></li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>
             </ul>
         </nav>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -60,22 +60,22 @@
             <ul>
                 <li>
                     <img src="./images/img4.jpg" alt="Фото Ігора" width="270" height="260">
-                    <h4>Ігор Дем'яненко</h4>
+                    <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img5.jpg" alt="Фото Ольги" width="270" height="260">
-                    <h4>Ольга Рєпіна</h4>
+                    <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img6.jpg" alt="Фото Миколи" width="270" height="260">
-                    <h4>Микола Тарасов</h4>
+                    <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img7.jpg" alt="Фото Михайла" width="270" height="260">
-                    <h4>Михайло Єрмаков</h4>
+                    <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
